updated style sheet

--- a/trunk/yase/yase-1.0.x/doc/yase.css
+++ b/trunk/yase/yase-1.0.x/doc/yase.css
@@ -1,6 +1,9 @@
 h1 {
     color: #0066CC;
-    margin-left: 0%
+    margin-left: 0%;
+    border-bottom: 1px dotted #333333;
+    margin-bottom: 20px
+
 }
 h2,h3 {
     color: #0066CC;
